fixed bottom part of the card

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
           it felt slightly bare and uninviting. I’ve got some simple tips
           to help you make any room feel complete.</p>
         <div class="author">
-          <img src="./images/avatar-michelle.jpg" alt="" class="author__avatar">
-          <p><span class="author__name">Michelle Appleton</span><br><span class="author__date">28 Jun 2020</span></p>
+          <div class="author-wrapper">
+            <img src="./images/avatar-michelle.jpg" alt="" class="author__avatar">
+            <p><span class="author__name">Michelle Appleton</span><br><span class="author__date">28 Jun 2020</span></p>
+          </div>
           <button class="share-btn"><img src="./images/icon-share.svg" alt="share button"></button>
         </div>
         <div class="social">
