0000000im done with this

--- a/index.html
+++ b/index.html
@@ -29,17 +29,21 @@
           </div>
           <button class="share-btn"><img src="./images/icon-share.svg" alt="share button"></button>
         </div>
-        <div class="social">
-          <a href="https://www.linkedin.com/in/piotr-p%C5%82otast-032308261/" aria-label="share this post">
-            <p class="share-text">SHARE</p>
-          </a>
-          <a href="https://www.github.com/PiotrPlotast"><img src="./images/icon-facebook.svg" alt="facebook"
-              aria-label="link to facebook"></a>
-          <a href="https://www.github.com/PiotrPlotast"><img src="./images/icon-twitter.svg" alt="twitter"
-              aria-label="link to twitter"></a>
-          <a href="https://www.frontendmentor.io/challenges/article-preview-component-dYBN_pYFT"><img
-              src="./images/icon-pinterest.svg" alt="pinterest" aria-label="link to pinterest"></a>
-        </div>
+      </div>
+      <div class="socials">
+        <a href="https://www.linkedin.com/in/piotr-p%C5%82otast-032308261/" aria-label="share this post"
+          class="socials__share-link">
+          <p>SHARE</p>
+        </a>
+        <a href="https://www.github.com/PiotrPlotast" aria-label="link to facebook"><img
+            src="./images/icon-facebook.svg" alt="facebook"></a>
+        <a href="https://www.github.com/PiotrPlotast" aria-label="link to twitter"><img src="./images/icon-twitter.svg"
+            alt="twitter"></a>
+        <a href="https://www.frontendmentor.io/challenges/article-preview-component-dYBN_pYFT"
+          aria-label="link to pinterest" class="socials__pinterest"><img src="./images/icon-pinterest.svg"
+            alt="pinterest"></a>
+        <button class="share-btn"><img src="./images/icon-share.svg" alt="share button"></button>
+
       </div>
     </div>
   </main>
