made mobile share button to finally work

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img src="./images/avatar-michelle.jpg" alt="" class="author__avatar">
             <p><span class="author__name">Michelle Appleton</span><br><span class="author__date">28 Jun 2020</span></p>
           </div>
-          <button class="share-btn"><img src="./images/icon-share.svg" alt="share button"></button>
+          <button class="open-menu-btn"><img src="./images/icon-share.svg" alt="share button"></button>
         </div>
       </div>
       <div class="socials">
@@ -42,7 +42,7 @@
         <a href="https://www.frontendmentor.io/challenges/article-preview-component-dYBN_pYFT"
           aria-label="link to pinterest" class="socials__pinterest"><img src="./images/icon-pinterest.svg"
             alt="pinterest"></a>
-        <button class="share-btn"><img src="./images/icon-share.svg" alt="share button"></button>
+        <button class="close-menu-btn"><img src="./images/icon-share.svg" alt="share button"></button>
 
       </div>
     </div>
