--- a/index.html
+++ b/index.html
@@ -22,26 +22,28 @@
         <p class="card__text">Ever been in a room and felt like something was missing? Perhaps
           it felt slightly bare and uninviting. I’ve got some simple tips
           to help you make any room feel complete.</p>
-        <div class="author">
-          <div class="author-wrapper">
-            <img src="./images/avatar-michelle.jpg" alt="" class="author__avatar">
-            <p><span class="author__name">Michelle Appleton</span><br><span class="author__date">28 Jun 2020</span></p>
-          </div>
-          <button class="open-menu-btn"><img src="./images/icon-share.svg" alt="share button"></button>
+      </div>
+      <div class="author">
+        <div class="author-wrapper">
+          <img src="./images/avatar-michelle.jpg" alt="" class="author__avatar">
+          <p><span class="author__name">Michelle Appleton</span><br><span class="author__date">28 Jun 2020</span></p>
         </div>
+        <button class="open-menu-btn"><img src="./images/icon-share.svg" alt="share button"></button>
       </div>
       <div class="socials">
-        <a href="https://www.linkedin.com/in/piotr-p%C5%82otast-032308261/" aria-label="share this post"
-          class="socials__share-link">
-          <p>SHARE</p>
-        </a>
-        <a href="https://www.github.com/PiotrPlotast" aria-label="link to facebook"><img
-            src="./images/icon-facebook.svg" alt="facebook"></a>
-        <a href="https://www.github.com/PiotrPlotast" aria-label="link to twitter"><img src="./images/icon-twitter.svg"
-            alt="twitter"></a>
-        <a href="https://www.frontendmentor.io/challenges/article-preview-component-dYBN_pYFT"
-          aria-label="link to pinterest" class="socials__pinterest"><img src="./images/icon-pinterest.svg"
-            alt="pinterest"></a>
+        <div class="socials__links--wrapper">
+          <a href="https://www.linkedin.com/in/piotr-p%C5%82otast-032308261/" aria-label="share this post"
+            class="socials__share-link">
+            <span>SHARE</span>
+          </a>
+          <a href="https://www.github.com/PiotrPlotast" aria-label="link to facebook"><img
+              src="./images/icon-facebook.svg" alt="facebook"></a>
+          <a href="https://www.github.com/PiotrPlotast" aria-label="link to twitter"><img
+              src="./images/icon-twitter.svg" alt="twitter"></a>
+          <a href="https://www.frontendmentor.io/challenges/article-preview-component-dYBN_pYFT"
+            aria-label="link to pinterest" class="socials__pinterest"><img src="./images/icon-pinterest.svg"
+              alt="pinterest"></a>
+        </div>
         <button class="close-menu-btn"><img src="./images/icon-share.svg" alt="share button"></button>
       </div>
     </div>
